--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,4 +1,8 @@
-FROM postgres:latest
+# Use a specific version of PostgreSQL
+FROM postgres:13
+
+# Install necessary packages
+RUN apt-get update && apt-get -y install libpq-dev
 ENV POSTGRES_PASSWORD=secret
 ENV POSTGRES_USER=username
 ENV POSTGRES_DB=database
