--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,41 @@
 version: "3.8"
 services:
   db:
-    build:
-      context: ./database/
-      dockerfile: Dockerfile
-    container_name: db
-    networks:
-      - djangonetwork
-
+    image: postgres
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_USER=username
+      - POSTGRES_DB=database
   app_back:
     build:
       context: ./parsing/
       dockerfile: Dockerfile
-    networks:
-      - djangonetwork
+    command: python main.py
+    volumes:
+      - .:/code
+    ports:
+      - "8000:8000"
+    environment:
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_USER=username
+      - POSTGRES_DB=database
+    depends_on:
+      - db
 
   app_front:
     build:
       context: .
       dockerfile: Dockerfile
-    networks:
-      - djangonetwork
-
-networks:
-  djangonetwork:
-    driver: bridge
+    command: sh -c "cd store && python manage.py runserver 0.0.0.0:8080"
+    volumes:
+      - .:/code
+    ports:
+      - "8080:8080"
+    environment:
+      - POSTGRES_PASSWORD=secret
+      - POSTGRES_USER=username
+      - POSTGRES_DB=database
+    depends_on:
+      - db
