--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,11 @@ services:
       - POSTGRES_USER=username
       - POSTGRES_DB=database
   app_back:
+    image: back
     build:
       context: ./parsing/
       dockerfile: Dockerfile
-    command: python main.py
+    command: sh -c "python main.py"
     volumes:
       - .:/code
     environment:
@@ -23,10 +24,11 @@ services:
       - db
 
   app_front:
+    image: front
     build:
       context: .
       dockerfile: Dockerfile
-    command: sh -c "cd store && python manage.py runserver 0.0.0.0:8080"
+    command: sh -c "cd store && python manage.py migrate && echo 'from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.create_superuser(\"admin\", \"admin@example.com\", \"admin\")' | python manage.py shell && python manage.py runserver 0.0.0.0:8080"
     volumes:
       - .:/code
     ports:
